--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <script>
     //定义表格列
     var columnDefs = [
-        { headerName: '姓名', field: 'name','pinned': 'left',width:120 },
+        { headerName: '姓名', field: 'name','pinned': 'left',width:120,  filter: 'agTextColumnFilter',checkboxSelection:true,headerCheckboxSelection:true },
         { headerName: '性别', field: 'sex' },
         { headerName: '年龄', field: 'age' },
         { headerName: '籍贯', field: 'jg' },
@@ -80,9 +80,9 @@
         pinnedTopRowData:topRows, //顶部合计行
         pinnedBottomRowData:botRows ,//顶部合计行
         //*******设置选择列********
-        // rowSelection: 'multiple', //设置多行选中 single 表示只能选中一行
-        // rowMultiSelectWithClick:true, 
-        // rowDeselection:true,
+        rowSelection: 'multiple', //设置多行选中 single 表示只能选中一行
+        rowMultiSelectWithClick:true, 
+        rowDeselection:true,
         //**************设置置顶行样式**********
         getRowStyle: function (params) { 
           if (params.node.rowPinned) {   
@@ -100,5 +100,43 @@
     function getSelect() {
       alert(JSON.stringify(gridOptions.api.getSelectedRows())); 
     }
+
+    // ********修改数据********
+    setTimeout(() => {
+      // 修改数据 
+      console.log(gridOptions.api);
+      var rowNode = gridOptions.api.getRowNode(2);
+      var newRow= { name: '三一', sex: '男', age: '35', 'jg': '中国', 'sf': '广东', 'dz': '广州市' };
+      rowNode.setData(newRow);
+
+      //删除选中行
+      var selRows = gridOptions.api.getSelectedRows(); 
+      console.log(selRows);
+      gridOptions.api.updateRowData({remove: selRows});
+
+       //第三种方法新增到第二行
+      var newRows= [{ name: 'paul', sex: '男', age: '35', 'jg': '中国', 'sf': '广东', 'dz': '广州市' }];  
+      gridOptions.api.updateRowData({add: newRows,addIndex:1});
+    }, 1000)
   </script>
 </html>
+
+
+<!-- 
+//全选包含隐藏的行
+gridOptions.api.selectAll();
+//反选
+gridOptions.api.deselectAll();
+//根据筛选条件选中行
+gridOptions.api.selectAllFiltered();
+//根据筛选条件选反行
+gridOptions.api.deselectAllFiltered();
+//获取选中数据var rows=gridOptions.api.getSelectedRows();
+alert(JSON.stringify(rows));
+
+// ag-grid vue
+安装ag-grid-community ag-grid-vue
+引入样式
+ag-grid-vue组件
+
+ -->
