--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,12 @@
   <!-- <script src="https://unpkg.com/ag-grid-enterprise/dist/ag-grid-enterprise.min.noStyle.js"></script> -->
   <!-- <script src="./demo1.js"></script> -->
   <!-- <script src="./demo2.js"></script> -->
-  <script src="./demo3.js"></script>
+  <!-- <script src="./demo3.js"></script> -->
+  <!-- <script src="./demo4.js"></script> -->
+  <!-- <script src="./demo5.js"></script> -->
+  <script src="./demo6.js"></script>
+
+
   <script>
   </script>
 </html>
