--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
   <!-- <script src="./demo3.js"></script> -->
   <!-- <script src="./demo4.js"></script> -->
   <!-- <script src="./demo5.js"></script> -->
-  <script src="./demo6.js"></script>
-
+  <!-- <script src="./demo6.js"></script> -->
+  <script src="./demo7.js"></script>
 
   <script>
   </script>
